--- a/src/styles/Sections/contact.scss
+++ b/src/styles/Sections/contact.scss
@@ -9,7 +9,7 @@
     width: 100%;
     height: 80vh;
     padding: 0 2rem;
-    background: var(--main-gray);
+    background: white;
   }
   
   .contact-section-header > h2 {
