--- a/src/styles/Sections/footer.scss
+++ b/src/styles/Sections/footer.scss
@@ -1,10 +1,11 @@
   /* Footer */  
   footer {
+    color: white;
     font-weight: 300;
     display: flex;
     justify-content: space-evenly;
     padding: 2rem;
-    background: var(--main-gray);
+    background: black;
     border-top: 4px solid var(--main-red);
   }
   
