--- a/src/styles/Utils/_colors.scss
+++ b/src/styles/Utils/_colors.scss
@@ -1,9 +1,8 @@
+//Brand or defaultTheme
 $base: #F5F5F5;
 $primary: #E4572E;
 $secondary: #2F3061;
 $foter: #37371F;
-//$fontColor: #000000;
-
 $tea-blue: #007EA7;
 
 
