--- a/src/styles/Utils/_colors.scss
+++ b/src/styles/Utils/_colors.scss
@@ -5,6 +5,11 @@ $secondary: #2F3061;
 $foter: #37371F;
 $tea-blue: #007EA7;
 
+//default variables
+$main-white: #f0f0f0;//CSS variables syntax
+$main-red: #81bdbd;
+$main-blue: #586279;
+$main-gray: #7d8c9e;
 
 //Typhography
 $fontColorDefaultTheme: #000000;
