Prepare for git hub actions

--- a/src/styles/Utils/_colors.scss
+++ b/src/styles/Utils/_colors.scss
@@ -1,4 +1,4 @@
-//Brand or defaultTheme
+//Brand or defaultTheme https://coolors.co/e4572e-f5f5f5-2f3061-37371f-007ea7
 $base: #F5F5F5;
 $primary: #E4572E;
 $secondary: #2F3061;
