--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,4 @@
-@import "./styles/Utils/_base.scss";
-@import "./styles/Utils/_mediaquerys.scss";
+@import "./styles/Utils/utils.scss";
 
 @import "./styles/Components/button.scss";
 
