--- a/src/styles/Utils/_colors.scss
+++ b/src/styles/Utils/_colors.scss
@@ -3,7 +3,8 @@ $base: #F5F5F5;
 $primary: #E4572E;
 $secondary: #2F3061;
 $foter: #37371F;
-$tea-blue: #007EA7;
+$tea-blue: #007EA7; //rgba(0, 156, 218, 0.616);
+$nav-link-bg: rgba(0, 156, 218, 0.616);
 
 //default variables
 $main-white: #f0f0f0;//CSS variables syntax
