--- a/src/styles/Sections/welcome.scss
+++ b/src/styles/Sections/welcome.scss
@@ -2,7 +2,10 @@
   
 .welcome-section {
   h1{
-    font-size: 10vw;
+    --minFontSize: 32px;
+  --maxFontSize: 100px;
+  --scaler: 10vw;
+  font-size: clamp( var(--minFontSize), var(--scaler), var(--maxFontSize) );
   }
   pre{
     font-size: 2vw;
