--- a/src/styles/Utils/_themes.scss
+++ b/src/styles/Utils/_themes.scss
@@ -12,6 +12,7 @@ $themes: (
 
 $defaultTheme: (
     "font-color": $fontColorDefaultTheme,
+    "nav-font-color": $navFontColor,
     "primary": $primary,
     "secondary": $nav-link-bg
 );
